IndexedDB: Can't pass DOMStringList to IDBDatabase.transaction() https://bugs.webkit.org/show_bug.cgi?id=74452

Patch by Joshua Bell <jsbell@chromium.org> on 2011-12-15
Reviewed by Adam Barth.

Source/WebCore:

V8 code generator generated checks for DOMStringList arguments, then
deferred to a function that only handled array inputs. This previously
worked for IndexedDB because it would fall into a now-removed default
handler.

Modified storage/indexeddb/transaction-basics.html to test this.

* bindings/v8/V8Binding.cpp:
(WebCore::v8ValueToWebCoreDOMStringList):

LayoutTests:

* storage/indexeddb/transaction-basics-expected.txt:
* storage/indexeddb/transaction-basics.html:

Canonical link: https://commits.webkit.org/91382@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103018 268f45cc-cd09-0410-ab3c-d52691b4dbfc